[Bug Fixing] Fixed search box flickering

--- a/src/account/Account.css
+++ b/src/account/Account.css
@@ -31,12 +31,6 @@
     width: 84vw;
 }
 
-.search-box-container {
-    height: 1.5rem;
-    width: 15vw;
-    margin: 1.5rem 2vw;
-}
-
 .page-chooser-box {
     width: 100%;
     margin: 1rem 0;
