--- a/src/utils/Header.css
+++ b/src/utils/Header.css
@@ -36,7 +36,7 @@ header {
 }
 
 .user-tool-bar-item {
-    width: var(--half-header-height);
+    width: calc(var(--half-header-height) * 0.8);
     height: var(--half-header-height);
 }
 
@@ -49,7 +49,7 @@ header {
 }
 
 .user-tool-bar-item>a>img {
-    height: 70%;
+    height: 50%;
     padding: 1%;
 }
 
