--- a/src/utils/SearchBox.css
+++ b/src/utils/SearchBox.css
@@ -1,5 +1,5 @@
 .search-box {
-    height: 100%;
+    height: 1.5em;
     padding: 1%;
     background-color: white;
     border-radius: 5px;
@@ -10,7 +10,15 @@
     border: 1px solid black;
 }
 
-.search-box img {
+.search-box-icon-container {
+    height: 100%;
+    aspect-ratio: 1 / 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.search-box-icon-container img {
     height: 80%;
     padding: 2%;
 }
@@ -32,6 +40,6 @@
     appearance: none;
     height: 10px;
     width: 10px;
-    background-image: url(./assets/cross_icon.png);
+    background-image: url(../assets/cross_icon.png);
     background-size: 10px 10px;
 }
